banner section added

--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,13 @@
     <!--header section start-->
     <header>
       <div class="wrapper">
-        <h1 class="logo"><a href="#FIXME" class="logo-link" title="Woox"></a></h1>
+        <h1 class="logo">
+          <a href="#FIXME" class="logo-link" title="Woox">
+            <figure class="logo-fig">
+              <img src="assets/images/logo.png" alt="">
+            </figure>
+          </a>
+        </h1>
         <div class="hamburger">
           <span class="bar bar1">bar</span>
           <span class="bar bar2">bar</span>
@@ -43,13 +49,136 @@
           </ul>
         </nav>
       </div>
-
     </header>
     <!--header section start-->
     <!--main section start-->
     <main>
-      <section>
-    </section>
+      <div class="banner-slide">
+        <ul class="banner">
+          <li class="banner-item">
+            <figure class="banner-fig">
+              <img src="assets/images/banner-01.jpg" alt="Banner Image">
+            </figure>
+            <div class="banner-content">
+              <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
+              <h2 class="banner-heading">Switzerland</h2>
+            </div>
+            <div class="banner-btn">
+              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+            </div>
+            <ul class="counter-list">
+              <li class="counter-item">
+                <h5 class="counter-heading">population:</h5>
+                <span class="counter-Num" data-target="8.66">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">Territory:</h5>
+                <span class="counter-Num" data-target="41.290">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">AVG Price:</h5>
+                <span class="counter-Num" data-target="1.100.200">0</span>
+              </li>
+              <li class="counter-item">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </li>
+            </ul>
+          </li>
+          <li class="banner-item">
+            <figure class="banner-fig">
+              <img src="assets/images/banner-02.jpg" alt="Banner Image">
+            </figure>
+            <div class="banner-content">
+              <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
+              <h2 class="banner-heading">Switzerland</h2>
+            </div>
+            <div class="banner-btn">
+              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+            </div>
+            <ul class="counter-list">
+              <li class="counter-item">
+                <h5 class="counter-heading">population:</h5>
+                <span class="counter-Num" data-target="8.66">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">Territory:</h5>
+                <span class="counter-Num" data-target="41.290">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">AVG Price:</h5>
+                <span class="counter-Num" data-target="1.100.200">0</span>
+              </li>
+              <li class="counter-item">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </li>
+            </ul>
+          </li>
+          <li class="banner-item">
+            <figure class="banner-fig">
+              <img src="assets/images/banner-03.jpg" alt="Banner Image">
+            </figure>
+            <div class="banner-content">
+              <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
+              <h2 class="banner-heading">Switzerland</h2>
+            </div>
+            <div class="banner-btn">
+              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+            </div>
+            <ul class="counter-list">
+              <li class="counter-item">
+                <h5 class="counter-heading">population:</h5>
+                <span class="counter-Num" data-target="8.66">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">Territory:</h5>
+                <span class="counter-Num" data-target="41.290">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">AVG Price:</h5>
+                <span class="counter-Num" data-target="1.100.200">0</span>
+              </li>
+              <li class="counter-item">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </li>
+            </ul>
+          </li>
+          <li class="banner-item">
+            <figure class="banner-fig">
+              <img src="assets/images/banner-04.jpg" alt="Banner Image">
+            </figure>
+            <div class="banner-content">
+              <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
+              <h2 class="banner-heading">Switzerland</h2>
+            </div>
+            <div class="banner-btn">
+              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+            </div>
+            <ul class="counter-list">
+              <li class="counter-item">
+                <h5 class="counter-heading">population:</h5>
+                <span class="counter-Num" data-target="8.66">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">Territory:</h5>
+                <span class="counter-Num" data-target="41.290">0</span>
+              </li>
+              <li class="counter-item">
+                <h5 class="counter-heading">AVG Price:</h5>
+                <span class="counter-Num" data-target="1.100.200">0</span>
+              </li>
+              <li class="counter-item">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="banner-control">
+          <li class="control-item">1</li>
+          <li class="control-item">2</li>
+          <li class="control-item">3</li>
+          <li class="control-item">4</li>
+        </ul>
+      </div>
     </main>
     <!--main section end-->
 
