visit country section structure added

--- a/Home.html
+++ b/Home.html
@@ -179,6 +179,93 @@
           <li class="control-item">4</li>
         </ul>
       </div>
+      <section class="visit-Country">
+        <div class="wrapper">
+          <h3 class="visit-heading">Visit One Of Our Countries Now</h3>
+          <p class="visit-description">Lorem ipsum dolar sit amet, consecteture adipiscing elit, sed do eiusmad tempor
+            incididunt ut labore</p>
+          <ul class="country-list">
+            <li class="country-item">
+              <figure class="country-fig">
+                <img src="/assets/images/country-01.jpg" alt="Country Image">
+              </figure>
+              <div class="country-content">
+                <div class="country-data">
+                  <div class="data-content">
+                    <h4 class="data-heading">switzerland</h4>
+                    <h5 class="data-sub-heading">Europe</h5>
+                  </div>
+                  <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
+                </div>
+                <p class="data-description">Woox Travel is a professional Bootstrap 5 theme HTML CSS layout for your
+                  website. You can use this layout for your commercial work.</p>
+                <ul class="people-data">
+                  <li class="people-list">8.66 Mil people</li>
+                  <li class="people-list">41.290 km2</li>
+                  <li class="people-list">$1.100.200</li>
+                  <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                </ul>
+              </div>
+            </li>
+            <li class="country-item">
+              <figure class="country-fig">
+                <img src="/assets/images/country-02.jpg" alt="Country Image">
+              </figure>
+              <div class="country-content">
+                <div class="country-data">
+                  <div class="data-content">
+                    <h4 class="data-heading">caribbean</h4>
+                    <h5 class="data-sub-heading">North America</h5>
+                  </div>
+                  <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
+                </div>
+                <p class="data-description">Lorem ipsumd dolor sit amet, consecteture adipiscing elit, sed do eiusmod
+                  tempor incididunt ut labore dolor sit amet, consecteture adipiscing elite, sed do eiusmod </p>
+                <ul class="people-data">
+                  <li class="people-list">44.48 Mil people</li>
+                  <li class="people-list">275.400 km2</li>
+                  <li class="people-list">$946.000</li>
+                  <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                </ul>
+              </div>
+            </li>
+            <li class="country-item">
+              <figure class="country-fig">
+                <img src="/assets/images/country-03.jpg" alt="Country Image">
+              </figure>
+              <div class="country-content">
+                <div class="country-data">
+                  <div class="data-content">
+                    <h4 class="data-heading">france</h4>
+                    <h5 class="data-sub-heading">Europe</h5>
+                  </div>
+                  <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
+                </div>
+                <p class="data-description">We hope this woOx templateis useful for you, please support us a <a
+                    href="#FIXME" title="Paypal">small amount of paypal</a>to info [at] <a href="#FIXME"
+                    class="template">templatemo.com</a>for our survival. we really appreciate your contribution.</p>
+                <ul class="people-data">
+                  <li class="people-list">67.41 Mil people</li>
+                  <li class="people-list">551.500 km2</li>
+                  <li class="people-list">$425.600</li>
+                  <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          <div class="mapouter">
+            <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
+                marginwidth="0"
+                src="https://maps.google.com/maps?width=356&amp;height=507&amp;hl=en&amp;q=sunny isless beach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+            </div>
+            <div class="btn-ctrl">
+              <button class="page-btn">1</button>
+              <button class="page-btn">2</button>
+              <button class="page-btn">3</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
