book  section structure added

--- a/Home.html
+++ b/Home.html
@@ -266,6 +266,17 @@
           </div>
         </div>
       </section>
+      <section class="book-section">
+        <div class="wrapper">
+          <div class="book-content">
+          <h3 class="book-heading">are you looking to travel ?</h3>
+          <span class="book-reserve">Make A Reservation By Clicking The Button</span>
+        </div>
+        <div class="book-btn">
+          <a href="#FIXME" class="reserve-btn" title="Book Yours Now"></a>
+        </div>
+        </div>
+      </section>
     </main>
     <!--main section end-->
 
