home page structure added

--- a/Home.html
+++ b/Home.html
@@ -269,12 +269,12 @@
       <section class="book-section">
         <div class="wrapper">
           <div class="book-content">
-          <h3 class="book-heading">are you looking to travel ?</h3>
-          <span class="book-reserve">Make A Reservation By Clicking The Button</span>
-        </div>
-        <div class="book-btn">
-          <a href="#FIXME" class="reserve-btn" title="Book Yours Now"></a>
-        </div>
+            <h3 class="book-heading">are you looking to travel ?</h3>
+            <span class="book-reserve">Make A Reservation By Clicking The Button</span>
+          </div>
+          <div class="book-btn">
+            <a href="#FIXME" class="reserve-btn" title="Book Yours Now"></a>
+          </div>
         </div>
       </section>
     </main>
@@ -282,7 +282,8 @@
 
     <!--footer section start-->
     <footer>
-
+      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved. Design <a href="#FIXME"
+          title="TemplateMo" class="copy-link">TemplateMo</a> </p>
     </footer>
     <!--footer section end-->
 
