home page validated and error corrected

--- a/Home.html
+++ b/Home.html
@@ -29,9 +29,7 @@
       <div class="wrapper">
         <h1 class="logo">
           <a href="#FIXME" class="logo-link" title="Woox">
-            <figure class="logo-fig">
-              <img src="assets/images/logo.png" alt="">
-            </figure>
+            <img src="assets/images/logo.png" alt="WoOx">
           </a>
         </h1>
         <div class="hamburger">
@@ -44,7 +42,7 @@
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
-            <li class="nav-item"><a href="Reservation .html" class="nav-link" title="Reservation">Reservation</a></li>
+            <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Book Yours">Book Yours</a></li>
           </ul>
         </nav>
@@ -203,7 +201,8 @@
                   <li class="people-list">8.66 Mil people</li>
                   <li class="people-list">41.290 km2</li>
                   <li class="people-list">$1.100.200</li>
-                  <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                  <li class="people-list"> <a href="#FIXME" class="direction-link" title="Need Direction">Need
+                      Directions ?</a></li>
                 </ul>
               </div>
             </li>
@@ -225,7 +224,8 @@
                   <li class="people-list">44.48 Mil people</li>
                   <li class="people-list">275.400 km2</li>
                   <li class="people-list">$946.000</li>
-                  <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                  <li class="people-list"> <a href="#FIXME" class="direction-link" title="Need Direction">Need
+                      Directions ?</a></li>
                 </ul>
               </div>
             </li>
@@ -248,15 +248,17 @@
                   <li class="people-list">67.41 Mil people</li>
                   <li class="people-list">551.500 km2</li>
                   <li class="people-list">$425.600</li>
-                  <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                  <li class="people-list"> <a href="#FIXME" class="direction-link" title="Need Direction">Need
+                      Directions ?</a></li>
                 </ul>
               </div>
             </li>
           </ul>
           <div class="mapouter">
-            <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
-                marginwidth="0"
-                src="https://maps.google.com/maps?width=356&amp;height=507&amp;hl=en&amp;q=sunny isless beach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+            <div class="gmap_canvas">
+              <iframe class="gmap-iframe"
+                src="https://maps.google.com/maps?width=356&amp;height=507&amp;hl=en&amp;q=sunnyislessbeach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+              </iframe>
             </div>
             <div class="btn-ctrl">
               <button class="page-btn">1</button>
