banner structure and comment added

--- a/About.html
+++ b/About.html
@@ -51,7 +51,17 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!-- banner section start here -->
+      <section class="banner">
+        <div class="wrapper">
+          <span class="explore-country">explore our country</span>
+          <h2 class="about-heading">Welcome To Caribbean</h2>
+          <p class="about-description">Lorem ipsum dolor sit amet, consecteture adipiscing elit, sed do elusmod tempor
+            incididunt uttersi labore et dolor magna aliqua is ipsum suspendisse ultrices gravida</p>
+            <a href="#FIXME" class="discover-btn">Discover More</a>
+        </div>
+      </section>
+      <!-- banner section end here -->
     </main>
     <!--main section end-->
 
