--- a/Home.html
+++ b/Home.html
@@ -51,6 +51,7 @@
     <!--header section start-->
     <!--main section start-->
     <main>
+      <!-- banner slide start here -->
       <div class="banner-slide">
         <ul class="banner">
           <li class="banner-item">
@@ -177,6 +178,8 @@
           <li class="control-item">4</li>
         </ul>
       </div>
+      <!-- banner slide end here -->
+      <!-- visit country section start here -->
       <section class="visit-Country">
         <div class="wrapper">
           <h3 class="visit-heading">Visit One Of Our Countries Now</h3>
@@ -268,6 +271,8 @@
           </div>
         </div>
       </section>
+      <!-- visit country section end here -->
+      <!-- book section start here -->
       <section class="book-section">
         <div class="wrapper">
           <div class="book-content">
@@ -279,6 +284,7 @@
           </div>
         </div>
       </section>
+      <!-- book section start here -->
     </main>
     <!--main section end-->
 
