offer section  structure  added

--- a/About.html
+++ b/About.html
@@ -58,10 +58,336 @@
           <h2 class="about-heading">Welcome To Caribbean</h2>
           <p class="about-description">Lorem ipsum dolor sit amet, consecteture adipiscing elit, sed do elusmod tempor
             incididunt uttersi labore et dolor magna aliqua is ipsum suspendisse ultrices gravida</p>
-            <a href="#FIXME" class="discover-btn">Discover More</a>
+          <a href="#FIXME" class="discover-btn">Discover More</a>
         </div>
       </section>
       <!-- banner section end here -->
+      <!-- cities section strt here -->
+      <section class="cities">
+        <div class="wrapper">
+          <div class="city-content">
+            <h3 class="city-heading">Caribbean's Cities & Towns</h3>
+            <div class="arrow">
+              <span class="left">left arrow</span>
+              <span class="right">right arroe</span>
+            </div>
+            <ul class="city-list">
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-01.jpg" alt="Havana">
+                  <figcaption>Havana</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-02.jpg" alt="Kingstone">
+                  <figcaption>Kingstone</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-03.jpg" alt="George Town">
+                  <figcaption>George Town</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-03.jpg" alt="Santo Domingo">
+                  <figcaption>Santo Domingo</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-01.jpg" alt="Havana">
+                  <figcaption>Havana</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-02.jpg" alt="Kingstone">
+                  <figcaption>Kingstone</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-03.jpg" alt="George Town">
+                  <figcaption>George Town</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-03.jpg" alt="Santo Domingo">
+                  <figcaption>Santo Domingo</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-01.jpg" alt="Havana">
+                  <figcaption>Havana</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-02.jpg" alt="Kingstone">
+                  <figcaption>Kingstone</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-03.jpg" alt="George Town">
+                  <figcaption>George Town</figcaption>
+                </figure>
+              </li>
+              <li class="city-item">
+                <figure class="city-fig">
+                  <img src="assets/images/cities-03.jpg" alt="Santo Domingo">
+                  <figcaption>Santo Domingo</figcaption>
+                </figure>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- cities section end here -->
+      <!-- offer section start here -->
+      <section class="offer">
+        <div class="wrapper">
+          <div class="offer-content">
+            <h3 class="offer-heading">Best Weekly Offer In Each City</h3>
+            <p class="offer-description">Lorem ipsum dolor sit amet, consecteture adipiscing elit, sed do eiusmad tempor
+              incididunt ut labore</p>
+          </div>
+          <ul class="city-slide">
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-01.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">Havana</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-02.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">Kingstone</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-03.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">George T</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-01.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">Havana</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-02.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">Kingstone</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-03.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">George T</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-01.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">Havana</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-02.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">Kingstone</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+            <li class="city-slide-item">
+              <figure>
+                <img src="assets/images/offers-03.jpg" alt="Havana">
+              </figure>
+              <div class="slide-content">
+                <div class="city-name">
+                  <div class="check">
+                    <h4 class="sub-heading">George T</h4>
+                    <span class="person-icon">234 Check Ins</span>
+                  </div>
+                  <div class="city-price">
+                    <span class="cost">$420/ person</span>
+                  </div>
+                </div>
+                <ul class="deal-list">
+                  <li class="deal-item">Deal Includes:</li>
+                  <li class="deal-item">5 Days Trip Hotel Included</li>
+                  <li class="deal-item">Airoplane Bill Included</li>
+                  <li class="deal-item">Daily Places Visit</li>
+                </ul>
+                <div class="deal-btn">
+                  <a href="" class="deal-link" title="Make A Reservation">Make A Reservation</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="deal-control"></div>
+        </div>
+      </section>
+      <!-- offer section end here -->
     </main>
     <!--main section end-->
 
