--- a/About.html
+++ b/About.html
@@ -388,6 +388,44 @@
         </div>
       </section>
       <!-- offer section end here -->
+      <!-- discover section start here -->
+      <section class="discover">
+        <div class="wrapper">
+          <figure class="discover-fig">
+            <img src="assets/images/about-left-image.jpg" alt="Discover Image">
+          </figure>
+          <div class="discover-content">
+            <h4 class="discover-heading">Discover More About Our Country</h4>
+            <p class="discover-description">Lorem Ispum dolor sit amet, consecteture adipiscing elit, sed do eiusmad
+              tempor incididunt ut labore.</p>
+            <ul class="discover-counter">
+              <li class="counter-1">
+                <span class="country-counter" data-discover="150.640+">0</span>
+                <h5 class="counter-heading">Total Guest Yearly</h5>
+              </li>
+              <li class="counter-1">
+                <span class="country-counter" data-discover="175.000+">0</span>
+                <h5 class="counter-heading">Amazing Accomoditations</h5>
+              </li>
+              <li class="counter-2">
+                <span class="country-counter" data-discover="12.560+">0</span>
+                <h5 class="counter-heading">Amazing Places</h5>
+              </li>
+              <li class="counter-2">
+                <span class="country-counter" data-discover="240.580+">0</span>
+                <h5 class="counter-heading">Different Check-Ins Yearly</h5>
+              </li>
+            </ul>
+            <p class="discover-description">Lorem ispum dolor sit amet, consecteture adipiscing elit, sed do eiusmad
+              tempor incididunt ut labore. Lorem ispum dolor sit amet, consecteture adipiscing elit, sed do eiusmad
+              tempor incididunt ut labore.</p>
+            <div class="More-btn">
+              <a href="#FIXME" title="Discover More">Discover More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- discover section end here -->
     </main>
     <!--main section end-->
 
