location  section  structure  added

--- a/About.html
+++ b/About.html
@@ -426,6 +426,28 @@
         </div>
       </section>
       <!-- discover section end here -->
+      <!-- location section start here -->
+      <section class="location">
+        <div class="wrapper">
+      <h3 class="location-heading">Best Location In Caribbeans</h3>
+      <p class="location-description">Lorem ispum dolor sit amet, consecteture adipiscing elit, sed do eiusmad tempor
+        incididunt ut labore</p>
+        <div class="map-content">
+          <h5 class="map-heading">Havana</h5>
+          <span class="population">population: 2M</span>
+        </div>
+        <ul class="map-icon-list">
+          <li class="icon">map Icon</li>
+          <li class="icon">map Icon</li>
+          <li class="icon">map Icon</li>
+          <li class="icon">map Icon</li>
+        </ul>
+        <div class="place-btn">
+          <a href="#FIXME" class="place-link" title="Discover All Places">Discover All Places</a>
+        </div>
+      </div>
+      </section>
+      <!-- location section end here -->
     </main>
     <!--main section end-->
 
