--- a/Reservation.html
+++ b/Reservation.html
@@ -26,7 +26,27 @@
   <div class="container">
     <!--header section start-->
     <header>
-
+      <div class="wrapper">
+        <h1 class="logo">
+          <a href="#FIXME" class="logo-link" title="Woox">
+            <img src="assets/images/logo.png" alt="WoOx">
+          </a>
+        </h1>
+        <div class="hamburger">
+          <span class="bar bar1">bar</span>
+          <span class="bar bar2">bar</span>
+          <span class="bar bar3">bar</span>
+        </div>
+        <nav class="navbar">
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Home">Home</a></li>
+            <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
+            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
+            <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
+            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Book Yours">Book Yours</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
