banner for reservation page  structure added

--- a/About.html
+++ b/About.html
@@ -55,10 +55,12 @@
       <section class="banner">
         <div class="wrapper">
           <span class="explore-country">explore our country</span>
-          <h2 class="about-heading">Welcome To Caribbean</h2>
+          <h2 class="heading">Welcome To Caribbean</h2>
           <p class="about-description">Lorem ipsum dolor sit amet, consecteture adipiscing elit, sed do elusmod tempor
             incididunt uttersi labore et dolor magna aliqua is ipsum suspendisse ultrices gravida</p>
-          <a href="#FIXME" class="discover-btn">Discover More</a>
+          <div class="discover-ctrl">
+            <a href="#FIXME" class="discover-btn">Discover More</a>
+          </div>
         </div>
       </section>
       <!-- banner section end here -->
