--- a/Reservation.html
+++ b/Reservation.html
@@ -51,7 +51,19 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!-- reserve-banner start here -->
+      <section class="reserve-banner">
+        <div class="wrapper">
+          <span class="prefered">Book Prefered Deal Here</span>
+          <h2 class="heading">Make Your Reservation</h2>
+          <p class="para">Lorem ipsum dolor sit amet, consecteture adipiscing elit, sed do eiusmad tempor incididunt
+            uttersi labore et dolore magna aliqua is ispum suspendisse ultrices gravida</p>
+          <div class="discover-ctrl">
+            <a href="#FIXME" class="discover-btn">Discover More</a>
+          </div>
+        </div>
+      </section>
+      <!-- reserve banner end here -->
     </main>
     <!--main section end-->
 
