connect for reservation page  structure added

--- a/Reservation.html
+++ b/Reservation.html
@@ -64,6 +64,26 @@
         </div>
       </section>
       <!-- reserve banner end here -->
+      <!-- connect section start hare -->
+      <section class="connect">
+        <div class="wrapper">
+          <ul class="connect-list">
+            <li class="connect-item">
+              <span class="connect-span">Make a Phone Call</span>
+              <a href="tel:+1234567890" title="Call Us">+123 456 789 (0)</a>
+            </li>
+            <li class="connect-item">
+              <span class="connect-span">Contact Us Via Email</span>
+              <a href="mailto:company@email.com" title="Email Us">comapny@email.com</a>
+            </li>
+            <li class="connect-item">
+              <span class="connect-span">Visit Our Offices</span>
+              <address>24th Street North Avenue London, UK</address>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- contact section end hare -->
     </main>
     <!--main section end-->
 
